--- a/index.html
+++ b/index.html
@@ -25,7 +25,15 @@
     </section>
 
     <section>
-        
+        Albert Michelson 1931-ben kidolgozott egy módszert a fénysebesség közvetlen mérésére oly módon, hogy megállapítja, mennyi ideig tart egy mért távolság elmozdulása . ... Ezután néhány kilométert tesz meg, majd visszatér, hogy a B arc tükrözze vissza. Amikor a prizma álló helyzetben van, a rés állóképe látható.Michelson egy általa tervezett műszer, interferométer segítségével bebizonyította, hogy a fény állandó sebességgel halad minden tehetetlenségi vonatkoztatási rendszerben, és lehetővé tette a távolságok nagyobb pontosságú mérését fényhullámok segítségével. ... Michelson 1931. május 9-én halt meg.
+    </section>
+
+    <section>
+        <a href="https://mult-kor.hu/igy-merte-meg-elsokent-a-feny-sebesseget-a-dan-csillagasz-ole-rmer-20181205">Olaf Römer</a>
+        <a href="https://aranydio.com/termeszet/a-fenysebesseg-merese">Galileo Galilei</a>
+        <a href="https://mult-kor.hu/20090723_fogaskerekkel_mertek_meg_a_feny_sebesseget">Hippolyte Fizeau</a>
+        <a href="https://www.fizkapu.hu/foucault200/eletrajz.html">León Foucault</a>
+        <a href="https://gobertpartners.com/how-much-shift-was-expected-in-michelson-morley-experiment">Michelson-Morley</a>
     </section>
 </body>
 </html>
