--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <section>
-        A fénysebesség mérését többen megkísérelték, egyik első közülük Galilei volt, aki két távoli hegycsúcson egy-egy lámpást helyezett el. A kísérletben először Galilei nyitotta ki lámpásának ablakát, és mikor a segítője a másik hegycsúcson megpillantotta a fényt, ő is kinyitotta a sajátját. Galilei a kísérletet különböző távolságokkal megismételte, de nem kapott eltérést, így rájött, hogy a mért idő jelentős részét az emberi reakcióidő teszi ki. Annyit megállapított, hogy a fény sebessége igen nagy. Mások úgy próbálták elvégezni a mérést, hogy egy éjszaka elsütött ágyú fényének egy távoli tükörről visszaverődését figyelték. A kísérlet szintén csak annyi eredményt hozott, hogy a fénysebesség igen nagy
+        A fénysebesség mérését többen megkísérelték, egyik első közülük Galilei volt, aki két távoli hegycsúcson egy-egy lámpást helyezett el. A kísérletben először Galilei nyitotta ki lámpásának ablakát, és mikor a segítője a másik hegycsúcson megpillantotta a fényt, ő is kinyitotta a sajátját. Galilei a kísérletet különböző távolságokkal megismételte, de nem kapott eltérést, így rájött, hogy a mért idő jelentős részét az emberi reakcióidő teszi ki. Annyit megállapított, hogy a fény sebessége igen nagy. Mások úgy próbálták elvégezni a mérést, hogy egy éjszaka elsütött ágyú fényének egy távoli tükörről visszaverődését figyelték.
     </section>
 
     <section>
