--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <section>
         1849-ben Fizeau fogaskerekes tárcsákkal megmérte a fény sebességét levegőben. Ez volt a fénysebesség első olyan mérése, amihez kizárólag a Földön telepített eszközöket használtak. Mivel a méréshez egy tükröt a mérőkészüléktől igen messze (a konkrét kísérletben 8633 m-re) kellett elhelyezni, a módszer eredeti, fogaskerekes formájával más közegekben (pl. vízben) nem lehetett a fénysebességét mérni.Ezért Foucault úgy finomította az eljárást, hogy a fogaskerekeket forgó tükrökkel váltotta fel. A visszaverő tükröt már elég volt néhány méternyire tenni a mérőkészüléktől, így a fénysebességet vízben (később más anyagokban) is megmérhették. Az 1851-ben Foucault által elvégzett mérések igazolták, hogy a fény sebessége bármely anyagban megegyezik a légüres térben mért fénysebesség és az illető anyag törésmutatójának a hányadosával.
-        <img src="foucault.png" alt="">
+        <img src="foucault.png" alt="" height="400px">
     </section>
 
     <section>
