--- a/index.html
+++ b/index.html
@@ -34,11 +34,12 @@
     </section>
 
     <section>
-        <a href="https://mult-kor.hu/igy-merte-meg-elsokent-a-feny-sebesseget-a-dan-csillagasz-ole-rmer-20181205">Olaf Römer</a>
-        <a href="https://aranydio.com/termeszet/a-fenysebesseg-merese">Galileo Galilei</a>
-        <a href="https://mult-kor.hu/20090723_fogaskerekkel_mertek_meg_a_feny_sebesseget">Hippolyte Fizeau</a>
-        <a href="https://www.fizkapu.hu/foucault200/eletrajz.html">León Foucault</a>
-        <a href="https://gobertpartners.com/how-much-shift-was-expected-in-michelson-morley-experiment">Michelson-Morley</a>
+        <a href="https://mult-kor.hu/igy-merte-meg-elsokent-a-feny-sebesseget-a-dan-csillagasz-ole-rmer-20181205">Olaf Römer</a><br>
+        <a href="https://aranydio.com/termeszet/a-fenysebesseg-merese">Galileo Galilei</a><br>
+        <a href="https://mult-kor.hu/20090723_fogaskerekkel_mertek_meg_a_feny_sebesseget">Hippolyte Fizeau</a><br>
+        <a href="https://www.fizkapu.hu/foucault200/eletrajz.html">León Foucault</a><br>
+        <a href="https://gobertpartners.com/how-much-shift-was-expected-in-michelson-morley-experiment">Michelson-Morley</a><br>
+        
     </section>
 </body>
 </html>
